===================
astroid's ChangeLog
===================


What's New in astroid 4.1.0?
============================
Release date: TBA

* Ensure ``ast.JoinedStr`` nodes are ``Uninferable`` when the ``ast.FormattedValue`` is
  ``Uninferable``. This prevents ``unexpected-keyword-arg`` messages in Pylint
  where the ``Uninferable`` string appeared in function arguments that were
  constructed dynamically.

  Closes pylint-dev/pylint#10822

* Add support for type constraints (`isinstance(x, y)`) in inference.

  Closes pylint-dev/pylint#1162
  Closes pylint-dev/pylint#4635
  Closes pylint-dev/pylint#10469

* Make `type.__new__()` raise clear errors instead of returning `None`

* Move object dunder methods from ``FunctionModel`` to ``ObjectModel`` to make them
  available on all object types, not just functions.

  Closes #2742
  Closes #2741
  Closes pylint-dev/pylint#6094

* ``lineno`` and ``end_lineno`` are now available on ``Arguments``.

* Add helper to iterate over all annotations nodes of function arguments,
  ``Arguments.get_annotations()``.

  Refs #2860

* Skip direct parent when determining the ``Decorator`` frame.

  Refs pylint-dev/pylint#8425

* Add simple command line interface for astroid to output generated AST.
  Use with ``python -m astroid``.

* Fix incorrect type inference for ``super().method()`` calls that return ``Self``.
  Previously, astroid would infer the parent class type instead of the child class type,
  causing pylint E1101 false positives in method chaining scenarios.

  Closes #457

* Add missing ``dtype`` and ``casting`` parameters to ``numpy.concatenate`` brain.

  Closes #2870



What's New in astroid 4.0.4?
============================
Release date: TBA

* Fix ability to detect .py modules inside PATH directories on Windows
  described by a UNC path with a trailing backslash (`\`)
    - Example: modutils.modpath_from_file(filename=r"\\Mac\Code\tests\test_resources.py", path=["\\mac\code\"]) == ['tests', 'test_resources']
