@@ -7,6 +7,10 @@ What's New in astroid 4.1.0?
 ============================
 Release date: TBA
 
+* Add support for equality constraints (``==``, ``!=``) in inference.
+  Closes pylint-dev/pylint#3632
+  Closes pylint-dev/pylint#3633
+
 * Ensure ``ast.JoinedStr`` nodes are ``Uninferable`` when the ``ast.FormattedValue`` is
   ``Uninferable``. This prevents ``unexpected-keyword-arg`` messages in Pylint
   where the ``Uninferable`` string appeared in function arguments that were
